--- a/Application/Home/View/Common/nav.html
+++ b/Application/Home/View/Common/nav.html
@@ -30,7 +30,7 @@
 						<li><a href="{:U('Home/Lab/labint')}">Research</a></li>
 						<li><a href="{:U('Home/Index/bdt')}">Bigdata</a></li>
 						<li><a href="{:U('Home/Lab/people')}">People</a></li>
-						<li><a  href="#"  >Login</a></li>
+						<li><a href="{$url}"  >Login</a></li>
 						<li><a href="{:U('Home/Lab/contact')}">Contact Us</a></li>
 						<div class="clearfix"> </div>
 					</ul>
