--- a/Public/css/navv.css
+++ b/Public/css/navv.css
@@ -53,7 +53,7 @@ body a{
 /*---------*/
 /*----*/
 
-@media(max-width:768px){
+@media screen and (max-width:768px){
 	span.menu{
 		display: block;
 		text-align: right;
@@ -75,7 +75,7 @@ body a{
 	.top-nav ul li{
 		display: block;
 		float:none;
-		margin-left: 10px;
+		margin-left: -10px;
 	}
 	.top-nav ul li a{
 		color:#fff;
@@ -86,7 +86,7 @@ body a{
 		padding:0.4em;
 	}	
 	.top-nav {
-	  margin-top: 20px;
+	  margin-top: 21px;
 	  margin-right: 3px;
 	}
 	.logo h1{
